# nautilus_trader

./: CLA_VI.md  CODE_OF_CONDUCT_VI.md  CONTRIBUTING_VI.md  Cargo.toml  README.md  README_VI.md  RELEASES_VI.md  ROADMAP_VI.md  SECURITY_VI.md  TRANSLATED_FILES_VI.md  build.py
.cargo/: config.toml
.docker/: DockerfileUbuntu  nautilus_trader.dockerfile
.github/: copilot-instructions.md
.github/workflows/: build.yml  performance.yml
crates/adapters/blockchain/: Cargo.toml
crates/adapters/demo/src/: big_brain_actor.py  big_brain_actor.rs  data_client.rs  lib.rs  main.py
crates/analysis/: README_VI.md
crates/common/: Cargo.toml
crates/common/src/messages/data/: request.rs  subscribe.rs  unsubscribe.rs
crates/common/src/msgbus/: mod.rs
crates/common/src/python/: mod.rs
crates/model/: Cargo.toml
crates/network/: Cargo.toml
crates/pyo3/: Cargo.toml
crates/pyo3/src/: lib.rs
examples/: README_VI.md
examples/live/binance/: binance_spot_ema_cross_bracket_algo.py
