[workspace]
resolver = "2"
members = [
    "crates",
    "crates/adapters/blockchain",
    "crates/adapters/coinbase_intx",
    "crates/adapters/databento",
    "crates/adapters/demo",
    "crates/adapters/tardis",
    "crates/analysis",
    "crates/backtest",
    "crates/cli",
    "crates/common",
    "crates/core",
    "crates/cryptography",
    "crates/data",
    "crates/execution",
    "crates/indicators",
    "crates/infrastructure",
    "crates/live",
    "crates/model",
    "crates/network",
    "crates/persistence",
    "crates/portfolio",
    "crates/pyo3",
    "crates/risk",
    "crates/serialization",
    "crates/system",
    "crates/testkit",
    "crates/trading",
    "crates/vendor/databento",
]

[workspace.package]
version = "0.49.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["Nautech Systems <info@nautechsystems.io>"]
license = "LGPL-3.0"
readme = "README.md"
description = "A high-performance algorithmic trading platform and event-driven backtester"
categories = ["finance", "simulation", "asynchronous"]
keywords = ["finance", "trading", "trading-platform", "algorithmic-trading", "quantitative-finance"]
documentation = "https://nautilustrader.io/docs"
repository = "https://github.com/nautechsystems/nautilus_trader"
homepage = "https://nautilustrader.io"

[workspace.dependencies]
nautilus-analysis = { path = "crates/analysis", version = "0.49.0" }
nautilus-backtest = { path = "crates/backtest", version = "0.49.0" }
nautilus-cli = { path = "crates/cli", version = "0.49.0" }
nautilus-common = { path = "crates/common", version = "0.49.0" }
nautilus-core = { path = "crates/core", version = "0.49.0" }
nautilus-cryptography = { path = "crates/cryptography", version = "0.49.0" }
nautilus-data = { path = "crates/data", version = "0.49.0" }
nautilus-execution = { path = "crates/execution", version = "0.49.0" }
nautilus-indicators = { path = "crates/indicators", version = "0.49.0" }
nautilus-infrastructure = { path = "crates/infrastructure", version = "0.49.0" }
nautilus-live = { path = "crates/live", version = "0.49.0" }
nautilus-model = { path = "crates/model", version = "0.49.0" }
nautilus-network = { path = "crates/network", version = "0.49.0" }
nautilus-persistence = { path = "crates/persistence", version = "0.49.0" }
nautilus-portfolio = { path = "crates/portfolio", version = "0.49.0" }
nautilus-pyo3 = { path = "crates/pyo3", version = "0.49.0" }
nautilus-risk = { path = "crates/risk", version = "0.49.0" }
nautilus-serialization = { path = "crates/serialization", version = "0.49.0" }
nautilus-system = { path = "crates/system", version = "0.49.0" }
nautilus-testkit = { path = "crates/testkit", version = "0.49.0" }
nautilus-trading = { path = "crates/trading", version = "0.49.0" }

# Adapters
nautilus-blockchain = { path = "crates/adapters/blockchain", version = "0.49.0" }
nautilus-coinbase-intx = { path = "crates/adapters/coinbase_intx", version = "0.49.0" }
nautilus-databento = { path = "crates/adapters/databento", version = "0.49.0" }
nautilus-tardis = { path = "crates/adapters/tardis", version = "0.49.0" }

# Dependencies
ahash = "0.8.12"
alloy-primitives = "1.1.2"
anyhow = "1.0.98"
arraydeque = "0.5.1"
arrow = { version = "55.1.0", default-features = false, features = ["csv", "json", "ipc"] }  # Keep major version in line with datafusion
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
async-stream = "0.3.6"
async-trait = "0.1.88"
base64 = "0.22.1"
binary-heap-plus = "0.5.0"
bytes = { version = "1.10.1", default-features = false, features = ["serde", "std"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde", "std", "clock"] }
chrono-tz = "0.10.3"
clap = { version = "4.5.38", features = ["derive", "env"] }
compare = "0.1.0"
csv = { version = "1.3.1", default-features = false }
dashmap = "6.1.0"
dbn = { version = "0.35.1", features = ["async", "serde"] }
deranged = "=0.4.0"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
evalexpr = "=11.3.1"  # Pinned to v11.3.1 for MIT licensing
fallible-streaming-iterator = "0.1.9"
flate2 = "1.1.1"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
futures-util = "0.3.31"
heck = "0.5.0"
hex = "0.4.3"
hostname = "0.4.1"
http = "1.2.0"
implied-vol = { version = "1.0.1", features = ["normal-distribution"] }
indexmap = { version = "2.9.0", default-features = false, features = ["serde", "std"] }
itertools = "0.14.0"
itoa = "1.0.15"
log = { version = "0.4.27", features = ["std", "kv", "serde"] }
lzma-sys = "0.1.20"
memchr = "2.7.4"
nonzero_ext = "0.3.0"
parquet = { version = "55.1.0", default-features = false, features = ["arrow", "async"] }  # Keep major version in line with datafusion
pem = "3.0.5"
procfs = "0.17.0"
pyo3 = { version = "0.25.0", features = ["chrono", "indexmap", "rust_decimal", "serde"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime", "tokio", "attributes"] }
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.9.1"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
rmp-serde = "1.3.0"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
semver = "1.0.25"
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
simple_logger = "5.0.0"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.35.2"
tabled = "0.19.0"
thiserror = "2.0.12"
thousands = "0.2.0"
time = { version = "0.3.41", features = ["macros", "parsing", "serde"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "fs"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["io"] }
toml = "0.8.20"
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
# Disable default feature "tracing-log" since it interferes with custom logging
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["smallvec", "fmt", "ansi", "std", "env-filter"] }
typed-builder = "0.21.0"
unbounded-interval-tree = "1.1.2"
url = "2.5.4"
urlencoding = "2.1.3"
ustr = { version = "1.1.0", default-features = false, features = ["serde"] }
uuid = { version = "1.17.0", default-features = false, features = ["v4", "serde", "std"] }
webpki-roots = "0.26.10"

# dev-dependencies
axum = "0.8.4"
criterion = "0.5.1"
float-cmp = "0.10.0"
iai = "0.1.1"
pretty_assertions = "1.4.1"
proptest = "1.6.0"
rstest = "0.25.0"
tempfile = "3.20.0"
tracing-test = "0.2.5"
wiremock = "0.6"

# build-dependencies
cbindgen = "0.29.0"

# Libaries involving tls, to avoid native-tls as much as possible especially in reqwest (creates compile issue with object_store)
alloy = { version = "1.0.9", default-features = false, features = [
    "contract", "essentials", "json", "json-abi",
    "provider-http", "providers", "rpc", "rpc-client",
    "rpc-types", "serde", "std", "transport-http"
] }
alloy-transport-http = { version = "1.0.9", default-features = false, features = ["hyper"] }
aws-lc-rs = "1.13.1"
databento = { path = "crates/vendor/databento", version = "0.26.2", default-features = false, features = ["historical", "live"] }
datafusion = { version = "47.0.0", default-features = false, features = [
    "datetime_expressions", "parquet", "regex_expressions"
] }
hypersync-client = { version = "0.18.2", default-features = false }
hypersync-schema = { version = "0.3.0", default-features = false }
object_store = { version = "0.12.1", default-features = false, features = [
    "aws", "azure", "gcp", "http"
] }
redis = { version = "0.31.0", features = [
    "connection-manager",
    "streams",
    "tokio-comp",
    "tokio-rustls-comp",
    "tls-rustls",
] }
reqwest = { version = "0.12.19", features = ["blocking", "rustls-tls", "stream", "json"], default-features = false }
rustls = { version = "0.23.27", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.5.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }

[profile.dev]
opt-level = 0
debug = false  # Improves compile times
debug-assertions = false  # Fails Cython build if true
overflow-checks = true
strip = "debuginfo"  # Improves compile times
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
strip = false
lto = false
incremental = true
codegen-units = 256

[profile.nextest]
inherits = "test"
debug = false # Improves compile times
strip = "debuginfo" # Improves compile times

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-debugging]
inherits = "release"
incremental = true
debug = "full"
strip = false
lto = false
